--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4672,3 +4672,55 @@ body.dark .dropdown-menu .dropdown-item.text-danger {
   display: block;
 }
 /*# sourceMappingURL=main.css.map */
+
+/*Activitychart*/
+ /* Activity */
+.activity {
+  font-size: 14px;
+}
+
+.activity .activity-item .activite-label {
+  color: #888;
+  position: relative;
+  flex-shrink: 0;
+  flex-grow: 0;
+  min-width: 64px;
+}
+
+ .activity .activity-item .activite-label::before {
+  content: "";
+  position: absolute;
+  right: -11px;
+  width: 4px;
+  top: 0;
+  bottom: 0;
+  background-color: #eceefe;
+}
+ .activity .activity-item .activity-badge {
+  margin-top: 3px;
+  z-index: 1;
+  font-size: 11px;
+  line-height: 0;
+  border-radius: 50%;
+  flex-shrink: 0;
+  border: 3px solid #fff;
+  flex-grow: 0;
+}
+
+.activity .activity-item .activity-content {
+  padding-left: 10px;
+  padding-bottom: 20px;
+}
+
+ .activity .activity-item:first-child .activite-label::before {
+  top: 5px;
+}
+
+ .activity .activity-item:last-child .activity-content {
+  padding-bottom: 0;
+}
+
+/* News & Updates */
+.news .post-item+.post-item {
+  margin-top: 15px;
+}
