--- a/client/src/index.css
+++ b/client/src/index.css
@@ -642,9 +642,9 @@ _submenu {
   display: block;
 }
 
-.menu-item:hover .submenu {
+ /* .menu-item:hover .submenu {
   display: block;
-}
+}  */
 
 .dropdown-menu {
   position: absolute;
@@ -4850,4 +4850,21 @@ body.dark .dropdown-menu .dropdown-item.text-danger {
 /* News & Updates */
 .news .post-item + .post-item {
   margin-top: 15px;
+}
+.navbar-aside {
+  transition: all 0.3s ease;
+}
+
+.navbar-aside.open {
+  transform: translateX(0);
+}
+
+@media (max-width: 768px) {
+  .navbar-aside {
+    transform: translateX(-100%);
+  }
+}
+
+.aside-mini .navbar-aside {
+  transform: translateX(0);
 }
