--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4886,3 +4886,9 @@ body.dark .dropdown-menu .dropdown-item.text-danger {
   padding-bottom: 0;
 }
 
+@media print {
+  .approval-row,
+  .checkbox-row {
+    display: none;
+  }
+}
